[gd_scene load_steps=3 format=3 uid="uid://dwymvudvx7wyx"]

[ext_resource type="PackedScene" uid="uid://bgq0f6devxwdy" path="res://src/plants_anim/plants_anim.tscn" id="1_1l15y"]
[ext_resource type="Script" path="res://src/plant/plant.gd" id="1_c5vgy"]

[node name="plant" type="Node2D"]
script = ExtResource("1_c5vgy")

[node name="plants_anim" parent="." instance=ExtResource("1_1l15y")]
animation = &"peas_hooter"
frame_progress = 0.0

[node name="product_timer" type="Timer" parent="."]

[node name="attack_timer" type="Timer" parent="."]

[node name="attack_mark" type="Marker2D" parent="."]
position = Vector2(35, -23)

[connection signal="timeout" from="product_timer" to="." method="_on_product_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
